# ember-csg

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/ember/: bvh.hh  clip.hh  ember.hh  exact_classify.hh  intersect_polygons.hh  local_bsp.hh  mesh.hh  polygon.hh  resolve_tjunctions.hh  segment_trace.hh  subdivision.hh  types.hh  winding.hh
python/: .gitignore  CMakeLists.txt  ember_ext.cpp  pyproject.toml
python/ember/: __init__.py
src/: ember.cc  tinybvh_impl.cc
test/: test_bvh_validate.cc  test_cubes.cc  test_manifold.cc  test_perf.cc  test_roundtrip.cc  test_trace.cc  test_wnv.cc
