[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "ember"
version = "0.1.0"
description = "Python bindings for EMBER Integer Exact CSG"
requires-python = ">=3.8"
authors = [
    { name = "Johnathon Selstad", email = "makeshifted@gmail.com" }
]
dependencies = [
    "numpy>=1.20.0",
]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
sdist.include = [
    "ember/",
    "ember_ext.cpp",
    "CMakeLists.txt",
    "extern/",
]
sdist.exclude = [
    "extern/**/.git",
    "extern/**/build",
]
build-dir = "build/{wheel_tag}"
